create data status view

--- a/core/templates/data_status.html
+++ b/core/templates/data_status.html
@@ -5,12 +5,12 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Analysis</title>
+   <title>Data Status</title>
 </head>
 
 <body>
-   <h1>Analysis</h1>
-   <p>World of Warcraft Commodities Analysis</p>
+   <h1>Data Status</h1>
+   <p>Database status and data integrity</p>
 </body>
 
 </html>
