create base template

--- a/core/templates/data_status.html
+++ b/core/templates/data_status.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Data Status</title>
-</head>
+{% block title %}Data Status{% endblock %}
 
-<body>
-   <h1>Data Status</h1>
-   <p>Database status and data integrity</p>
-</body>
-
-</html>
+{% block content %}
+<h1>Data Status</h1>
+<p>Database status and data integrity</p>
+{% endblock %}
