--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Home</title>
-</head>
+{% block title %}Home{% endblock %}
 
-<body>
-   <h1>Home</h1>
-   <p>Project description</p>
-</body>
-
-</html>
+{% block content %}
+<h1>Home</h1>
+<p>Project description</p>
+{% endblock %}
