--- a/core/templates/analysis.html
+++ b/core/templates/analysis.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Analysis</title>
-</head>
+{% block title %}Analysis{% endblock %}
 
-<body>
-   <h1>Analysis</h1>
-   <p>World of Warcraft Commodities Analysis</p>
-</body>
-
-</html>
+{% block content %}
+<h1>Analysis</h1>
+<p>World of Warcraft Commodities Analysis</p>
+{% endblock %}
