--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -2,15 +2,78 @@
 <html lang="en">
 
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>{% block title %}{% endblock %}</title>
+   <meta
+      charset="UTF-8">
+   <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge">
+   <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0">
+   <!-- ### Child template title ### -->
+   <title>
+      {% block title %}
+      {% endblock %}
+   </title>
+
+   <!-- ### Include Bootstrap CSS ### -->
+   <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous">
 </head>
 
 <body>
+
+   <!-- ### Navbar ### -->
+   <nav
+      class="navbar navbar-expand-md navbar-light bg-light">
+      <button
+         class="navbar-toggler"
+         type="button"
+         data-toggle="collapse"
+         data-target="#navbarSupportedContent"
+         aria-controls="navbarSupportedContent"
+         aria-expanded="false"
+         aria-label="Toggle navigation">
+         <span
+            class="navbar-toggler-icon"></span>
+      </button>
+
+      <div
+         class="collapse navbar-collapse"
+         id="navbarSupportedContent">
+         <ul
+            class="navbar-nav mr-auto">
+            <li
+               class="nav-item active">
+               <a class="nav-link"
+                  href="/">Home</a>
+            </li>
+            <li
+               class="nav-item">
+               <a class="nav-link"
+                  href="/analysis">Analysis</a>
+            </li>
+            <li
+            class="nav-item">
+            <a class="nav-link"
+               href="/data_status">Data Status</a>
+         </li>
+         </ul>
+      </div>
+   </nav>
+
+   <!-- ## Child template content ## -->
    {% block content %}
    {% endblock %}
+
+   <!-- ### Include Bootstrap JavaScript Bundle + Popper ### -->
+   <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
