--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -28,7 +28,7 @@
 
    <!-- ### Navbar ### -->
    <nav
-      class="navbar navbar-expand-md navbar-light bg-light">
+      class="navbar navbar-expand-md navbar-light bg-dark">
       <button
          class="navbar-toggler"
          type="button"
