update navbar/views + add views

--- a/core/templates/market.html
+++ b/core/templates/market.html
@@ -1,12 +1,12 @@
 <!-- prettier-ignore -->
 {% extends "base.html" %}
-{% block title %}Analysis{% endblock %}
+{% block title %}Market Analysis{% endblock %}
 {% block content %}
 
 <!-- ### Include Chart.js CDN ### -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-<h1>Analysis</h1>
+<h1>Market Analysis</h1>
 <p>World of Warcraft Commodities Analysis</p>
 
 <div>
@@ -25,8 +25,8 @@
 
   const weekdays = timestamps.map((timestamp) => {
     const date = new Date(timestamp);
-    const options = { weekday: 'long' };
-    return date.toLocaleDateString('en-US', options);
+    const options = { weekday: "long" };
+    return date.toLocaleDateString("en-US", options);
   });
 
   new Chart(document.getElementById("line-chart"), {
