--- a/core/templates/market.html
+++ b/core/templates/market.html
@@ -13,31 +13,31 @@
   <canvas id="line-chart" width="800" height="450"></canvas>
 </div>
 
-<!-- ### Unique timestamps / Amount of auctions (views.py) ### -->
+<!-- ### Unique timestamps / Available unique items (views.py) ### -->
 <!-- prettier-ignore -->
 <script id="timestamp-list" type="application/json">{{timestamp_list|safe}}</script>
 <!-- prettier-ignore -->
-<script id="auctions-count-list" type="application/json">{{auctions_count_list}}</script>
+<script id="items-count-list" type="application/json">{{auctions_count_list}}</script>
 
 <script>
-  const timestamps = JSON.parse(document.getElementById("timestamp-list").textContent);
-  const auctions = JSON.parse(document.getElementById("auctions-count-list").textContent);
+  const timestamps = JSON.parse(document.getElementById('timestamp-list').textContent);
+  const items = JSON.parse(document.getElementById('items-count-list').textContent);
 
   const weekdays = timestamps.map((timestamp) => {
     const date = new Date(timestamp);
-    const options = { weekday: "long" };
-    return date.toLocaleDateString("en-US", options);
+    const options = { weekday: 'long' };
+    return date.toLocaleDateString('en-US', options);
   });
 
-  new Chart(document.getElementById("line-chart"), {
-    type: "line",
+  new Chart(document.getElementById('line-chart'), {
+    type: 'line',
     data: {
       labels: weekdays,
       datasets: [
         {
-          data: auctions,
-          label: "Weekly Amount of Auctions",
-          borderColor: "#3e95cd",
+          data: items,
+          label: 'Available unique Items',
+          borderColor: '#3e95cd',
           fill: true,
         },
       ],
