add home view basic content

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,8 +1,79 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %}
 
-{% block title %}Home{% endblock %}
+<h1>World of Warcraft Commodities Analysis 📊</h1>
 
-{% block content %}
-<h1>Home</h1>
-<p>Project description</p>
+<br /><img src="https://media.giphy.com/media/piTF2qfkyjpG4EB5Kk/giphy.gif" width="400" /><br /><br />
+
+<h2>What is it about❓</h2>
+
+<p>Blizzard recently made significant changes to the economy in World of Warcraft. Previously, each server had its own unique economy with varying market trends based on the in-game activities of players on that specific server. However, now commodities are traded region-wide, leading to increased availability of these items but also heightened competition.</p>
+
+<p>This project aims to analyze commodity pricing and market trends in the in-game economy through a web application that serves as a service layer. The application will collect auction data using the WoW API, process the information to identify items with fluctuating prices and high trading volumes, and present this information to players in a user-friendly format. This will provide valuable insights for players seeking to make informed trades and stay ahead in the in-game economy.</p>
+
+<h2>What should be the outcome? 💡</h2>
+
+<ul>
+  <li>A web application that collects and stores auction data for in-game commodities hourly using the WoW API.</li>
+  <li>Automatically identifies items that fluctuate in price and are traded in large quantities on a weekly basis.</li>
+</ul>
+
+<h2>Data Collection and Processing 🕸️</h2>
+
+<ul>
+  <li>Gather auction data for in-game commodities using the WoW API.</li>
+  <li>Data includes item id, name, price, quantity and time left.</li>
+  <li>Auction data enriched with quality, level, item class, item subclass, description and image.</li>
+  <li>Clean and preprocess data to eliminate irrelevant or duplicate information.</li>
+</ul>
+
+<h2>Market Analysis ⌚</h2>
+
+<ul>
+  <li>Analyze market trends to identify patterns and fluctuations in supply and demand.</li>
+  <li>Create charts to show number of items available, volumes traded, and market value.</li>
+</ul>
+
+<h2>Item Distribution Analysis 🍰</h2>
+
+<ul>
+  <li>Create charts to show the distribution of each item against other relevant features such as sales volume and popularity.</li>
+  <li>This will help players understand which items are in high demand and identify potential opportunities for profitable trades.</li>
+</ul>
+
+<h2>Profitability Calculation 💰</h2>
+
+<ul>
+  <li>Calculate the profitability of each item based on traded quantities and market prices.</li>
+  <li>Identify items that have high profitability and are currently underpriced in the market.</li>
+</ul>
+
+<h2>Data Visualization 📈</h2>
+
+<ul>
+  <li>Present data in a meaningful way to allow users to easily identify items with consistent patterns of fluctuation in price.</li>
+</ul>
+
+<h2>Skills utilized 🤹‍♀️</h2>
+
+<ul>
+  <li>Data collection (World of Warcraft API)</li>
+  <li>Data cleaning (Python, Pandas)</li>
+  <li>Data analysis (Time series analysis)</li>
+  <li>Data visualization (Matplotlib, Seaborn, ChartJS)</li>
+</ul>
+
+<h2>Technologies used ⚙️</h2>
+
+<ul>
+  <li>PostgreSQL database (AWS)</li>
+  <li>Backend (Django, Python)</li>
+  <li>Frontend (JavaScript, HTML, CSS)</li>
+</ul>
+
+<h2>Project management ✔️</h2>
+
+<ul>
+  <li><a href="https://github.com/users/Senimtra/projects/6" target="_blank">GitHub Projects</a></li>
+</ul>
+
 {% endblock %}
