--- a/core/templates/market.html
+++ b/core/templates/market.html
@@ -9,8 +9,10 @@
 <h1>Market Analysis</h1>
 <p>World of Warcraft Commodities Analysis</p>
 
-<div>
-  <canvas id="line-chart" width="800" height="450"></canvas>
+<div class="row justify-content-center">
+  <div class="col-md-8">
+    <canvas id="line-chart" width="800" height="450"></canvas>
+  </div>
 </div>
 
 <!-- ### Unique timestamps / Available unique items (views.py) ### -->
