enrich item details view data

--- a/core/templates/details.html
+++ b/core/templates/details.html
@@ -12,6 +12,14 @@
 <p>ITEM_QUANTITY {{quantity}}</p>
 <p>ITEM_RANK {{rank}}</p>
 <p>ITEM_COMB_RANK {{comb_rank}}</p>
-<p>ITEM_PRICE_RANGE {{price_range}}</p>
+<p>ITEM_POTENTIAL_PROFIT {{profit}}</p>
+<p>ITEM_LAST_PRICE {{last_price}}</p>
+<p>ITEM_QUALITY {{quality}}</p>
+<p>ITEM_LEVEL {{level}}</p>
+<p>ITEM_CLASS {{item_class}}</p>
+<p>ITEM_SUBCLASS {{item_subclass}}</p>
+<p>ITEM_DESCRIPTION {{description}}</p>
+<p>ITEM_BUY_POINT {{buy_point}}</p>
+<p>ITEM_SELL_POINT {{sell_point}}</p>
 
 {% endblock %}
