--- a/core/templates/details.html
+++ b/core/templates/details.html
@@ -10,7 +10,7 @@
 
 <h1>DETAILS</h1>
 <p>ITEM_ID {{item_id}}</p>
-<p>ITEM_LINK {{link</p>
+<p>ITEM_LINK {{link}}</p>
 <p>ITEM_NAME {{name}}</p>
 <p>ITEM_QUANTITY {{quantity}}</p>
 <p>ITEM_RANK {{rank}}</p>
