apply home view styles

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -14,10 +14,10 @@
     <!-- ### Include CSS file ### -->
     <link rel="stylesheet" href="{% static 'styles/css/styles.css' %}" />
   </head>
-
+  <img id="bg" src="{% static 'images/background.jpg' %}" />
   <body>
     <!-- ### Navbar ### -->
-    <nav class="navbar container navbar-expand-md navbar-toggleable-sm fixed-top mt-lg-4 mt-md-5">
+    <nav class="navbar container navbar-expand-md navbar-toggleable-sm fixed-top">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
