--- a/static/styles/styles.scss
+++ b/static/styles/styles.scss
@@ -1,53 +1,98 @@
-/* ### General Styles ### */
+/* ### Include ### */
+
+@import 'home.css';
+
+
+/* ### General styles ### */
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+#bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+  z-index: -1;
 }
 
 body {
-  background-image: url('/static/images/background.jpg');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
-  margin: 0;
-  padding: 0;
   color: white;
+  height: 100vh;
 }
 
-/* ### Navbar Styles ### */
+
+/* ### Navbar styles ### */
 
 .navbar {
   background-color: #0000009a;
 
   width: 100% !important;
   position: fixed !important;
-  //   margin: 1rem 1rem;
-  //   padding: 1rem 2rem;
+  padding: 1rem 2rem;
   border-radius: 0.3rem;
   a {
     color: white;
   }
 }
 
-/* ### General Styles ### */
+
+/* ### Content styles ### */
 
 .content-container {
   position: fixed;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  overflow-y: auto;
-  height: 100vh;
-  margin-top: 8rem;
-  background-color: #0000009a;
+  background-color: #000000d0;
+  border-radius: 0.3rem;
+  overflow-y: auto; /* add vertical scrolling to the parent container */
+  border-top: 2.5rem solid rgba(0, 0, 255, 0);
+  border-bottom: 2.5rem solid rgba(0, 0, 255, 0);
+}
+
+.content {
+  padding: 0 2rem;
+  height: calc(100vh - 15rem);
 }
 
 .content-container::-webkit-scrollbar {
   display: none;
 }
 
-.content {
-  height: 100vh; /* set a fixed height for the content */
-  margin-bottom: 200px;
+
+/* ### Media Queries ### */
+
+@media (max-width: 991.98px) {
+  /* styles for medium screens */
+  .content-container {
+    margin-top: 10rem;
+  }
+  .navbar {
+    margin-top: 3.5rem;
+  }
+  .content {
+  }
+}
+
+@media (min-width: 992px) {
+  /* styles for large screens */
+  .content-container {
+    margin-top: 9rem;
+  }
+  .navbar {
+    margin-top: 2.5rem;
+  }
+  .content {
+  }
 }
